# readcube-mcp

./: .gitattributes  .gitignore  LICENSE  README.md  demo.ipynb  demo_query2label.py  manual_fusion_example.py  pyproject.toml  setup.cfg  test_fusion_quick.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  make.bat  requirements.yaml  user_guide.rst
readcube_mcp/: __init__.py
src/mcp_server/: __init__.py
src/query2label/: __init__.py
src/query2label/core/: __init__.py  types.py
src/query2label/data/: __init__.py  processors.py
src/query2label/dspy_modules/: __init__.py  validators.py
src/query2label/utils/: __init__.py  helpers.py  logging_config.py
src/readcube_mcp/: __init__.py
src/readcube_mcp/query2label/: __init__.py
src/readcube_mcp/query2label/core/: __init__.py  exceptions.py  fusion.py  types.py
src/readcube_mcp/query2label/data/: __init__.py  filters.py  loaders.py  processors.py
src/readcube_mcp/query2label/dspy_modules/: __init__.py  signatures.py  translators.py  validators.py
src/readcube_mcp/query2label/fusion/: __init__.py  processors.py
src/readcube_mcp/query2label/utils/: __init__.py  config.py  helpers.py  logging_config.py  metrics.py
tests/: test_config.py  test_data_layer.py  test_dspy_signatures.py  test_fusion.py  test_integration.py  test_manual_fusion.py  test_query2label.py  test_readcube_mcp.py  test_translators.py
